# crystal-engine

./: CHANGELOG.MD  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
examples/pong/: Cargo.toml  ball.rs  main.rs  paddle.rs  score.rs
examples/pong/assets/: ball.blend  ball.mtl  paddle.blend  paddle.mtl
examples/pong/src/: ball.rs  main.rs  paddle.rs  score.rs
src/: color.rs  error.rs  game_state.rs  internal.rs  lib.rs  math.rs
src/event/: mod.rs
src/gui/: builder.rs  element.rs  mod.rs  pipeline.rs
src/math/: deg.rs  euler.rs  matrix4.rs  mod.rs  rad.rs  vector2.rs  vector3.rs
src/model/: builder.rs  data.rs  handle.rs  mod.rs  pipeline.rs  render.rs
src/model/loader/: mod.rs  obj.rs
src/model/loader/fbx/: mod.rs
src/model/loader/fbx/data/: geometry.rs  material.rs  mesh.rs  scene.rs  texture.rs
src/model/loader/fbx/v7400/: mod.rs  triangulator.rs
src/render/: lights.rs  mod.rs  model.rs  model_handle.rs  pipeline.rs  window.rs
src/render/model/: builder.rs  data.rs  handle.rs  mod.rs  render.rs
src/render/model/loader/: fbx.rs  mod.rs  obj.rs
src/render/model/loader/fbx/data/: material.rs  mesh.rs  scene.rs
