[package]
name = "crystal-engine"
version = "0.1.3"
authors = ["Trangar <victor.koenders@gmail.com>"]
readme = "readme.md"
description = "A simple 3D engine"
license = "MIT"
repository = "https://github.com/Trangar/crystal-engine"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
png = "0.16.3"
winit = "0.22.2"
cgmath = { version = "0.17.0", features = ["mint"] }
rand = "0.7.3"
parking_lot = "0.10.2"
array-init = "0.1.1"
image = "0.23"
rgb = "0.8"

# Optional dependencies, these are only included when they are needed for features
genmesh = { version = "0.6.2", optional = true }
obj = { version = "0.10.0", features = ["genmesh"], optional = true }
fbxcel-dom = { version = "0.0.5", optional = true }
anyhow = { version = "1", optional = true } # dependent on fbxcel-dom

[features]
default = ["format-obj", "format-fbx"]
format-obj = ['obj', 'genmesh']
format-fbx = ["fbxcel-dom", "anyhow"]

