[package]
name = "crystal-engine"
version = "0.4.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
readme = "readme.md"
description = "A simple 3D engine"
license = "MIT"
repository = "https://github.com/Trangar/crystal-engine"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
winit = "0.22.2"
cgmath = { version = "0.17.0", features = ["mint"] }
parking_lot = "0.11.0"
array-init = "0.1.1"
image = "0.23.8"
rusttype = "0.9.2"
thiserror = "1.0.20"

# Optional dependencies, these are only included when they are needed for features
genmesh = { version = "0.6.2", optional = true }
obj = { version = "0.10.1", features = ["genmesh"], optional = true }
fbxcel-dom = { version = "0.0.5", optional = true }
anyhow = { version = "1", optional = true } # dependent on fbxcel-dom

[dev-dependencies]
rand = "0.7"

[features]
default = ["format-obj", "format-fbx"]
format-obj = ['obj', 'genmesh']
format-fbx = ["fbxcel-dom", "anyhow"]
dummy = [] # dummy feature for CI tools

[[example]]
name = "pong"
path = "examples/pong/main.rs"
required-features = ["format-obj"]
